迁移配方定义与运行态分离